ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/AOP_Category__c.field-meta.xml
<CustomField>
    <fullName>AOP_Category__c</fullName>
    <inlineHelpText>Is the project in the current year AOP?</inlineHelpText>
    <label>AOP Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Ambition</fullName>
            </value>
            <value>
                <fullName>Not in AOP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>