ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/BEP__c.field-meta.xml
<CustomField>
    <fullName>BEP__c</fullName>
    <description>The price at which out product would deliver zero cost savings</description>
    <label>BEP</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>