ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>NBPT GMP</fullName>
            </value>
            <value>
                <fullName>Project Artemis - Dex</fullName>
            </value>
            <value>
                <fullName>Intermediates G2M</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>2022 Upside Plan</fullName>
                <isActive>false</isActive>
                <label>2022 Upside Plan</label>
            </value>
            <value>
                <fullName>2023 Top Deals</fullName>
                <isActive>false</isActive>
                <label>2023 Top Deals</label>
            </value>
            <value>
                <fullName>Ethanol</fullName>
                <isActive>false</isActive>
                <label>Ethanol</label>
            </value>
            <value>
                <fullName>Phoenix - Other</fullName>
                <isActive>false</isActive>
                <label>Phoenix - Other</label>
            </value>
            <value>
                <fullName>Phoenix - Textile</fullName>
                <isActive>false</isActive>
                <label>Phoenix - Textile</label>
            </value>
            <value>
                <fullName>Project Avengers</fullName>
                <isActive>false</isActive>
                <label>Project Avengers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>