ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <label>Campaign Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lab Trials</fullName>
            </value>
            <value>
                <fullName>Plant Trials</fullName>
            </value>
            <value>
                <fullName>Commercial Scale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>