ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Close_Year__c.field-meta.xml
<CustomField>
    <fullName>Close_Year__c</fullName>
    <formula>Year( CloseDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>