ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Close_Year_Comments__c.field-meta.xml
<CustomField>
    <fullName>Close_Year_Comments__c</fullName>
    <label>Close Year Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>