ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Close_Year_Px__c.field-meta.xml
<CustomField>
    <fullName>Close_Year_Px__c</fullName>
    <label>Close Year Px</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>