ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Close_Year_Rev__c.field-meta.xml
<CustomField>
    <fullName>Close_Year_Rev__c</fullName>
    <formula>Close_Year_Vol__c *  Close_Year_Px__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Year Rev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>