ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Close_Year_Vol__c.field-meta.xml
<CustomField>
    <fullName>Close_Year_Vol__c</fullName>
    <label>Close Year Vol</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>