ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Comm_Update__c.field-meta.xml
<CustomField>
    <fullName>Comm_Update__c</fullName>
    <inlineHelpText>Short update on commercial status</inlineHelpText>
    <label>Comm Update</label>
    <type>TextArea</type>
</CustomField>