ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Commercial_Lead__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R_D_Portfolio</relationshipName>
    <type>Lookup</type>
</CustomField>