ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Completed_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Completed_Milestones__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Completed Milestones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>