ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Current_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Current_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>notEqual</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Strategic Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>