ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Current_Technology__c.field-meta.xml
<CustomField>
    <fullName>Current_Technology__c</fullName>
    <label>Current Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBH</fullName>
            </value>
            <value>
                <fullName>KBH</fullName>
            </value>
            <value>
                <fullName>SHS Powder</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>SHS Liquid</fullName>
            </value>
            <value>
                <fullName>Peroxide</fullName>
            </value>
            <value>
                <fullName>FAS</fullName>
            </value>
            <value>
                <fullName>TMB</fullName>
            </value>
            <value>
                <fullName>TMB Azeo</fullName>
            </value>
            <value>
                <fullName>Caustic Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>