ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Current_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Revenue__c</fullName>
    <formula>Current_Year_Volume__c  *  Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated. Values are in US Dollar</inlineHelpText>
    <label>Current Year Revenue Pot.</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>