ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Current_Year_Volume__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Volume__c</fullName>
    <label>Current Year Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>