ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Customer_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Investment_Amount__c</fullName>
    <inlineHelpText>Only complete this field if &quot;Customer Investment Required?&quot; is set to &quot;yes.&quot;</inlineHelpText>
    <label>Customer Investment Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>