ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Customer_Investment_Required__c.field-meta.xml
<CustomField>
    <fullName>Customer_Investment_Required__c</fullName>
    <label>Customer Investment Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>