ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Customer_Product__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <label>Customer Product</label>
    <length>40</length>
    <type>Text</type>
</CustomField>