ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Development_Update__c.field-meta.xml
<CustomField>
    <fullName>Development_Update__c</fullName>
    <inlineHelpText>Short update on Development Status</inlineHelpText>
    <label>Development Update</label>
    <type>TextArea</type>
</CustomField>