ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/End_Use__c.field-meta.xml
<CustomField>
    <fullName>End_Use__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <label>End Use</label>
    <length>40</length>
    <type>Text</type>
</CustomField>