ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/First_Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Sales_Date__c</fullName>
    <label>First Sales Date</label>
    <type>Date</type>
</CustomField>