ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Formatted_Customer_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Customer_Requested_Date__c</fullName>
    <formula>IF(
				ISBLANK(Customer_Requested_Date__c),
				&quot;&quot;,
				CASE(
								MONTH(Customer_Requested_Date__c),
								1, &quot;Jan&quot;,
								2, &quot;Feb&quot;,
								3, &quot;Mar&quot;,
								4, &quot;Apr&quot;,
								5, &quot;May&quot;,
								6, &quot;Jun&quot;,
								7, &quot;Jul&quot;,
								8, &quot;Aug&quot;,
								9, &quot;Sep&quot;,
								10, &quot;Oct&quot;,
								11, &quot;Nov&quot;,
								&quot;Dec&quot;
				) &amp; &quot; &quot; &amp; TEXT(YEAR(Customer_Requested_Date__c))
)</formula>
    <label>Formatted Customer Requested Date</label>
    <type>Text</type>
</CustomField>