ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Full_Year_Volume__c.field-meta.xml
<CustomField>
    <fullName>Full_Year_Volume__c</fullName>
    <inlineHelpText>Enter values in KG</inlineHelpText>
    <label>Full Year Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>