ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/FY_Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>FY_Forecast_Amount__c</fullName>
    <description>Amount forecast for the full year (maintained by flow/trigger)</description>
    <inlineHelpText>Amount forecast for the full year</inlineHelpText>
    <label>FY Forecast Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>