ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/GATE_1_Date__c.field-meta.xml
<CustomField>
    <fullName>GATE_1_Date__c</fullName>
    <inlineHelpText>Idea Date</inlineHelpText>
    <label>GATE 1 Date</label>
    <type>Date</type>
</CustomField>