ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/GATE_2_Date__c.field-meta.xml
<CustomField>
    <fullName>GATE_2_Date__c</fullName>
    <inlineHelpText>Feasibility date</inlineHelpText>
    <label>GATE 2 Date</label>
    <type>Date</type>
</CustomField>