ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/GATE_3_Date__c.field-meta.xml
<CustomField>
    <fullName>GATE_3_Date__c</fullName>
    <inlineHelpText>Business Case Date</inlineHelpText>
    <label>GATE 3 Date</label>
    <type>Date</type>
</CustomField>