ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner__c</fullName>
    <description>Checks whether the logged in user is the Owner</description>
    <formula>$User.Id =  Owner.Id</formula>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>