ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Lead_Chemist__c.field-meta.xml
<CustomField>
    <fullName>Lead_Chemist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RD Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RD_Portfolio2</relationshipName>
    <type>Lookup</type>
</CustomField>