ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pharmaceutical</fullName>
            </value>
            <value>
                <fullName>Agrochemical</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>News_Mag</fullName>
            </value>
            <value>
                <fullName>Specialty Paper</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Tissue</fullName>
            </value>
            <value>
                <fullName>Petrochemical</fullName>
            </value>
            <value>
                <fullName>Surfactants</fullName>
            </value>
            <value>
                <fullName>Textile</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Coatings</fullName>
            </value>
            <value>
                <fullName>Chloralkali</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ethanol Purification</fullName>
            </value>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>TFD/ALD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>