ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/NBD_Lead__c.field-meta.xml
<CustomField>
    <fullName>NBD_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NBD Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>