ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To bulk update owners</description>
    <label>New Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>