ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Next_Gate_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Gate_Review_Date__c</fullName>
    <formula>CASE( TEXT( StageName ) , 
&apos;Stage 0 - Idea&apos;, GATE_1_Date__c , 
&apos;Stage 1 - Feasibility&apos;, GATE_2_Date__c,
&apos;Stage 2 - Business Case&apos;, GATE_3_Date__c,
&apos;Stage 3 - Development&apos;, GATE_4_Date__c,
&apos;Stage 4 - Scale Up&apos;, GATE_5_Date__c,
Target_Launch__c)</formula>
    <label>Next Gate Review Date</label>
    <type>Date</type>
</CustomField>