ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Next_Year__c</fullName>
    <formula>Year( CloseDate )+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>