ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Next_Year_Comments__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_Comments__c</fullName>
    <label>Next Year Comments</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>