ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Next_Year_Rev__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_Rev__c</fullName>
    <formula>Next_Year_Vol__c *  Next_Year_Px__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Year Rev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>