ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Next_Year_Vol__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_Vol__c</fullName>
    <label>Next Year Vol</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>