ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Opp_Health__c.field-meta.xml
<CustomField>
    <fullName>Opp_Health__c</fullName>
    <label>Opp Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yellow</fullName>
                <default>true</default>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>