ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Opp_Health_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Opp_Health_Indicator__c</fullName>
    <formula>CASE(Opp_Health__c, 
  &quot;Green&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;), 
  &quot;Yellow&quot;, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;),
  &quot;Red&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),
  &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Health Indicator</label>
    <type>Text</type>
</CustomField>