ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Opp_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_Count__c</fullName>
    <label>Opp Product Count</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>