ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Opportunity ID</label>
    <type>AutoNumber</type>
</CustomField>