ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Original_RD_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Original_RD_Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original RD Portfolio</label>
    <referenceTo>RD_Portfolio__c</referenceTo>
    <relationshipLabel>Opportunities (Original RD Portfolio)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>