ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status__c</fullName>
    <inlineHelpText>What is the status of the opportunity from a FCST standpoint. Is it in the current FCST? Is it in the committed Gap Closure plan? s it upside to FCST and Gap Closure?</inlineHelpText>
    <label>Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upside</fullName>
            </value>
            <value>
                <fullName>In FCST</fullName>
            </value>
            <value>
                <fullName>Gap Closure</fullName>
            </value>
            <value>
                <fullName>In AOP</fullName>
                <isActive>false</isActive>
                <label>In AOP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>