ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronics &amp; Energy Transition</fullName>
            </value>
            <value>
                <fullName>Life Science</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>Electronics &amp; energy transfer</fullName>
                <isActive>false</isActive>
                <label>Electronics &amp; energy transfer</label>
            </value>
            <value>
                <fullName>GMP API &amp; Reagents</fullName>
                <isActive>false</isActive>
                <label>GMP API &amp; Reagents</label>
            </value>
            <value>
                <fullName>Intermediates</fullName>
                <isActive>false</isActive>
                <label>Intermediates</label>
            </value>
            <value>
                <fullName>Life Science: Non-GMP</fullName>
                <isActive>false</isActive>
                <label>Life Science: Non-GMP</label>
            </value>
            <value>
                <fullName>Lifescience, gmp, inter</fullName>
                <isActive>false</isActive>
                <label>Lifescience, gmp, inter</label>
            </value>
            <value>
                <fullName>Specialty Reagents &amp; Application Development</fullName>
                <isActive>false</isActive>
                <label>Specialty Reagents &amp; Application Development</label>
            </value>
            <value>
                <fullName>Specialty reagents, development</fullName>
                <isActive>false</isActive>
                <label>Specialty reagents, development</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>