ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <inlineHelpText>Enter values in USD.</inlineHelpText>
    <label>Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>