ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Product_Brand__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand__c</fullName>
    <label>Product Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOROL Solution</fullName>
            </value>
            <value>
                <fullName>CHROMACLEAR Solution</fullName>
            </value>
            <value>
                <fullName>COLORCLEAR Solution</fullName>
            </value>
            <value>
                <fullName>Not Determined</fullName>
                <default>true</default>
                <label>Not Determined</label>
            </value>
            <value>
                <fullName>SB200 Granules</fullName>
            </value>
            <value>
                <fullName>SB200 Powder</fullName>
            </value>
            <value>
                <fullName>TMB</fullName>
            </value>
            <value>
                <fullName>TMBa</fullName>
            </value>
            <value>
                <fullName>VENPURE AF Granules</fullName>
            </value>
            <value>
                <fullName>VENPURE Caplets</fullName>
            </value>
            <value>
                <fullName>VENPURE SF Powder</fullName>
            </value>
            <value>
                <fullName>VENPURE Powder</fullName>
            </value>
            <value>
                <fullName>VENPURE SF Granules</fullName>
            </value>
            <value>
                <fullName>VENURE Solution</fullName>
            </value>
            <value>
                <fullName>VENMET Solution</fullName>
            </value>
            <value>
                <fullName>Caustic Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>