ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DSBH</fullName>
            </value>
            <value>
                <fullName>LSBH</fullName>
            </value>
            <value>
                <fullName>TMB</fullName>
            </value>
            <value>
                <fullName>Caustic</fullName>
            </value>
            <value>
                <fullName>Boranes</fullName>
            </value>
            <value>
                <fullName>Alcoholates</fullName>
            </value>
            <value>
                <fullName>Alkali Metals</fullName>
            </value>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>GMP</fullName>
            </value>
            <value>
                <fullName>Intermediates</fullName>
            </value>
            <value>
                <fullName>TFD/CVD</fullName>
            </value>
            <value>
                <fullName>TMBa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>