ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Product_Number_Sku__c.field-meta.xml
<CustomField>
    <fullName>Product_Number_Sku__c</fullName>
    <label>Product Number Sku</label>
    <length>30</length>
    <type>Text</type>
</CustomField>