ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Products_Quantity_Sum__c.field-meta.xml
<CustomField>
    <fullName>Products_Quantity_Sum__c</fullName>
    <label>Products Quantity Sum</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>