ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Products_Sales_Price_Sum__c.field-meta.xml
<CustomField>
    <fullName>Products_Sales_Price_Sum__c</fullName>
    <label>Products Sales Price Sum</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>