ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Opportunity/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Electrolytes</fullName>
            </value>
            <value>
                <fullName>Alcoholates Extensions</fullName>
            </value>
            <value>
                <fullName>Alkyl Lithiums</fullName>
            </value>
            <value>
                <fullName>Applications Development</fullName>
            </value>
            <value>
                <fullName>Boranes Extensions</fullName>
            </value>
            <value>
                <fullName>Deuterium Reagents</fullName>
            </value>
            <value>
                <fullName>Emerging Pharma</fullName>
            </value>
            <value>
                <fullName>Enabling Ligands</fullName>
            </value>
            <value>
                <fullName>Generics API</fullName>
                <label>Generic API</label>
            </value>
            <value>
                <fullName>GMP INT &amp; Reagents</fullName>
            </value>
            <value>
                <fullName>Lucky Strikes</fullName>
            </value>
            <value>
                <fullName>Organometallic Precursors</fullName>
            </value>
            <value>
                <fullName>Product Improvement</fullName>
            </value>
            <value>
                <fullName>Spec. Intermediates</fullName>
            </value>
            <value>
                <fullName>Analytical Development</fullName>
            </value>
            <value>
                <fullName>Electronic Gases</fullName>
            </value>
            <value>
                <fullName>Alcoholate&apos;s Extensions</fullName>
                <isActive>false</isActive>
                <label>Alcoholate&apos;s Extensions</label>
            </value>
            <value>
                <fullName>Alkyl Lithium</fullName>
                <isActive>false</isActive>
                <label>Alkyl Lithium</label>
            </value>
            <value>
                <fullName>Deuterium</fullName>
                <isActive>false</isActive>
                <label>Deuterium</label>
            </value>
            <value>
                <fullName>Lucky Strike</fullName>
                <isActive>false</isActive>
                <label>Lucky Strike</label>
            </value>
            <value>
                <fullName>Phoenix (dsbh)</fullName>
                <isActive>false</isActive>
                <label>Phoenix (dsbh)</label>
            </value>
            <value>
                <fullName>Rare Earth</fullName>
                <isActive>false</isActive>
                <label>Rare Earth</label>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>